--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,6 @@ img {
 .header-inner {
   display: flex;
   align-items: center;
-  flex-grow: 1;
 }
 
 .header-nav {
@@ -151,8 +150,12 @@ img {
   cursor: pointer;
   display: block;
   border-radius: 4px;
-  padding: 16px 32px;
-  margin: 0 auto;
+  border: none;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 48px;
+  min-width: 169px;
+  height: 56px;
 }
 
 .button:hover,
@@ -164,7 +167,7 @@ img {
 /* Section 2 */
 
 .section-two {
-  padding: 120px;
+  padding: 120px 0;
 }
 
 .visually-hidden {
@@ -181,12 +184,22 @@ img {
   overflow: hidden;
 }
 
+.section-two-list {
+  display: flex;
+  gap: 24px;
+}
+
+.section-two-item {
+  width: calc((100% - 72px) / 4);
+}
+
 .section-two-title {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .section-two-paragraph {
@@ -197,6 +210,7 @@ img {
 
 .section-three {
   background-color: #f4f4fd;
+  padding: 120px 0;
 }
 
 .section-three-title {
@@ -205,39 +219,77 @@ img {
   font-size: 36px;
   font-style: normal;
   font-weight: 700;
-  line-height: 40px;
   letter-spacing: 0.72px;
   text-transform: capitalize;
   line-height: 1.11;
+  margin-bottom: 72px;
+}
+
+.section-three-list {
+  display: flex;
+  gap: 24px;
 }
 
 .team-background {
   background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 4px;
+}
+
+.section-team {
+  padding: 32px 0;
 }
 
 .team-title {
   color: #2e2f42;
   font-size: 20px;
-  font-style: normal;
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.4px;
+  margin-bottom: 8px;
+  text-align: center;
 }
 
 .team-paragraph {
-  font-weight: 400;
+  color: #434455;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
 }
 
 /* Section 4 */
+
+.section-four {
+  padding: 120px 0;
+}
+
 .section-four-title {
   text-align: center;
   font-size: 36px;
   font-style: normal;
   font-weight: 700;
-  line-height: 40px;
   line-height: 1.11;
   letter-spacing: 0.72px;
   text-transform: capitalize;
+  margin-bottom: 72px;
+}
+
+.section-four-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.section-four-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.portfolio-list-div {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 
 .section-four-app {
@@ -247,6 +299,7 @@ img {
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.4px;
+  margin-bottom: 8px;
 }
 .section-four-paragraph {
   color: #434455;
@@ -260,6 +313,7 @@ img {
 
 .footer {
   background-color: #2e2f42;
+  padding: 100px 0;
 }
 
 .footer-logo {
@@ -270,6 +324,8 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  display: inline-block;
+  margin-bottom: 8px;
 }
 .span-footer-logo {
   color: #f4f4fd;
@@ -278,4 +334,5 @@ img {
 .footer-paragraph {
   color: #f4f4fd;
   font-weight: 400;
+  max-width: 264px;
 }
