--- a/css/styles.css
+++ b/css/styles.css
@@ -233,7 +233,7 @@ img {
 .team-background {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
-  border-radius: 0px 4px;
+  border-radius: 0px 0px 4px 4px;
 }
 
 .section-team {
@@ -325,7 +325,7 @@ img {
   text-transform: uppercase;
   color: #4d5ae5;
   display: inline-block;
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 .span-footer-logo {
   color: #f4f4fd;
